<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3"
        android:padding="@dimen/status_message_padding">

        <TextView
            android:id="@+id/status_message"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_gravity="center"
            android:layout_margin="10dp"
            android:gravity="center"
            android:text="@string/buy_text"
            android:textColor="@color/promptGray"
            android:textSize="@dimen/prompt_medium"/>

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="6">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/bottle_container"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/buy_pauillac"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/wine_bottle_height"
                        android:src="@drawable/wine_bottle"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/buy_pauillac"
                        android:textColor="@color/promptGray"
                        android:textSize="@dimen/prompt_small"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/buy_margaux"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/wine_bottle_height"
                        android:src="@drawable/wine_bottle"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/buy_margaux"
                        android:textColor="@color/promptGray"
                        android:textSize="@dimen/prompt_small"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <ImageView
                        android:id="@+id/buy_pessac"
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/wine_bottle_height"
                        android:src="@drawable/wine_bottle"/>

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:text="@string/buy_pessac"
                        android:textColor="@color/promptGray"
                        android:textSize="@dimen/prompt_small"/>

                </LinearLayout>

            </LinearLayout>

            <Button
                android:id="@+id/buy_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_margin="20dp"
                android:enabled="false"
                android:text="@string/choose"/>

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/buy_hashtag"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center_horizontal"
        android:layout_weight="1"
        android:background="@color/colorBdx"
        android:gravity="center"
        android:text="@string/hashtag_bdx"
        android:textColor="@android:color/white"
        android:textSize="@dimen/prompt_big"/>

    <View
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"/>

</LinearLayout>
