<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_welcome"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">

    <TextView
        android:id="@+id/state_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_above="@+id/logoContainer"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="40dp"
        android:textColor="@android:color/white"
        android:textSize="@dimen/prompt_big"/>

    <LinearLayout
        android:id="@+id/logoContainer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:paddingBottom="@dimen/screen_welcome_vertical_offset">

        <ImageView
            android:layout_width="@dimen/logo_xebicon_width"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:contentDescription="@string/xebicon_logo"
            android:src="@drawable/xebicon_logo"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/screen_welcome_slogan"
            android:textColor="@android:color/white"
            android:textSize="@dimen/prompt_medium"/>
    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:paddingBottom="@dimen/screen_welcome_vertical_offset"
        android:text="@string/screen_welcome_date"
        android:textColor="@android:color/white"
        android:textSize="@dimen/prompt_medium"
        android:textStyle="bold"/>
</RelativeLayout>
